--- a/UI/Login/FinalizeAccession/FixationDetailsPage.xaml
+++ b/UI/Login/FinalizeAccession/FixationDetailsPage.xaml
@@ -44,7 +44,7 @@
                         </Grid.RowDefinitions>
                         
                         <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold">Processor Run:</TextBlock>
-                        <ListBox Name="ListBoxProcessorRun" Grid.Column="0" Grid.Row="1" Grid.RowSpan="5" ItemsSource="{Binding Path=ProcessorRunCollection}" SelectedItem="{Binding Path=FixationUpdate.ProcessorRun}" DisplayMemberPath="Name" Margin="2,2,2,2"></ListBox>
+                        <ListBox Name="ListBoxProcessorRun" Grid.Column="0" Grid.Row="1" Grid.RowSpan="5" ItemsSource="{Binding Path=ProcessorRunCollection}" DisplayMemberPath="Name" Margin="2,2,2,2"></ListBox>
 
                         <Button Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" HorizontalAlignment="Stretch" Margin="5,5,5,5" Click="ButtonSet_Click" VerticalAlignment="Stretch">Set</Button>
 
@@ -87,7 +87,7 @@
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <CheckBox Grid.Column="0" Grid.Row="0" IsChecked="{Binding Path=FixationUpdate.SpecimenAccessioningAssumption}" Margin="2,2,2,2"/>
+                    <CheckBox Grid.Column="0" Grid.Row="0" Margin="2,2,2,2"/>
                     <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2">Specimen was accessioned within 15 minutes of formulin being added.</TextBlock>                    
 
                 </Grid>
