--- a/UI/Login/FinalizeAccession/ProviderDistributionPage.xaml
+++ b/UI/Login/FinalizeAccession/ProviderDistributionPage.xaml
@@ -54,6 +54,7 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>                    
                     <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
@@ -108,13 +109,16 @@
                     <Hyperlink Click="HyperLinkAddWYDOHDistribution_Click">WYDOH</Hyperlink>
                 </TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="21" Margin="5,3,0,0">
-                    <Hyperlink Click="HyperLinkAddFaxDistribution_Click">Fax</Hyperlink>
+                    <Hyperlink Click="HyperLinkAddOPNDistribution_Click">OPN</Hyperlink>
                 </TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="22" Margin="5,3,0,0">
+                    <Hyperlink Click="HyperLinkAddFaxDistribution_Click">Fax</Hyperlink>
+                </TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="23" Margin="5,3,0,0">
                     <Hyperlink Click="HyperLinkAddPrintDistribution_Click">Print</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="23" Margin="5,3,0,0" VerticalAlignment="Bottom">
+                <TextBlock Grid.Column="0" Grid.Row="24" Margin="5,3,0,0" VerticalAlignment="Bottom">
                     <Hyperlink Click="HyperLinkAddComplete_Click">Complete</Hyperlink>
                 </TextBlock>
 
