--- a/UI/Test/EgfrResultPage.xaml
+++ b/UI/Test/EgfrResultPage.xaml
@@ -166,13 +166,16 @@
                     <TextBlock Grid.Column="0" Grid.Row="12" Margin="2,2,2,2" FontWeight="Bold">Method:</TextBlock>
                     <TextBox Grid.Column="0" Grid.Row="13" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRMutationAnalysisTestOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
 
-                    <TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="14" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRMutationAnalysisTestOrder.Distribute}"></CheckBox>
+                    <TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" FontWeight="Bold">Report Disclaimer:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.Row="15" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRMutationAnalysisTestOrder.ReportDisclaimer}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
 
-					<TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
-					<CheckBox Grid.Column="1" Grid.Row="15" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRMutationAnalysisTestOrder.NoCharge}"></CheckBox>
+                    <TextBlock Grid.Column="0" Grid.Row="16" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
+                    <CheckBox Grid.Column="1" Grid.Row="17" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRMutationAnalysisTestOrder.Distribute}"></CheckBox>
 
-					<Grid Grid.Column="0" Grid.Row="16" Grid.ColumnSpan="2">
+					<TextBlock Grid.Column="0" Grid.Row="18" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
+					<CheckBox Grid.Column="1" Grid.Row="18" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRMutationAnalysisTestOrder.NoCharge}"></CheckBox>
+
+					<Grid Grid.Column="0" Grid.Row="19" Grid.ColumnSpan="2">
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="Auto"></ColumnDefinition>
 							<ColumnDefinition Width="*"></ColumnDefinition>
