--- a/UI/Client/ClientEntry.xaml
+++ b/UI/Client/ClientEntry.xaml
@@ -179,12 +179,12 @@
                         </Grid.ColumnDefinitions>
 
                         <TextBlock Grid.Column="0" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center" Text="Provider/Client Name:" />
-                        <TextBox Grid.Column="1" Margin="2,2,2,2" HorizontalAlignment="Stretch"/>
+                        <TextBox Name="TextBoxReferringProviderClient" Grid.Column="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" KeyUp="TextBoxReferringProviderClient_KeyUp"/>
                         <Button Grid.Column="2" Width="70" Height="25" Margin="2,2,2,2" Click="ButtonAddReferringProviderClient_Click">Add</Button>
                     </Grid>
 
                     <ListBox Name="ListBoxReferringProviders" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" BorderThickness="1" IsTabStop="False"
-							  ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=PhysicianCollection}">
+							  ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemsSource="{Binding Path=ReferringProviderClientCollection}">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel HorizontalAlignment="Stretch" Orientation="Horizontal">
@@ -202,7 +202,7 @@
                         </Grid.ColumnDefinitions>
 
                         <TextBlock Grid.Column="0" Margin="2,2,2,2" HorizontalAlignment="Right" VerticalAlignment="Center" Text="Referring Provider/Client:" />
-                        <TextBlock Grid.Column="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=Client.ReferringProviderClientName}"/>
+                        <TextBlock Grid.Column="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Text="{Binding Path=Client.ReferringProviderClientName}"/>
                         <Button Grid.Column="2" Width="70" Height="25" Margin="2,2,2,2" Click="ButtonRemoveReferringProviderClient_Click">Remove</Button>
                     </Grid>
 
