--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -65,6 +65,7 @@
                 <MenuItem Header="Billing Reports" Click="MenuItemBillingReports_Click"></MenuItem>
                 <MenuItem Header="PSA Transfer" Click="MenuItemPSATransder_Click"></MenuItem>
                 <MenuItem Header="SVH Billing Data Import" Click="MenuItemSVHBillingDataImport_Click"></MenuItem>
+                <MenuItem Header="Parse PSA Data" Click="MenuItemParsePSAData_Click"></MenuItem>
             </MenuItem>
 
 			<MenuItem Header="_Scan Processing" Name="MenuItemScanProcessing">
