--- a/UI/Test/EgfrToAlkReflexPage.xaml
+++ b/UI/Test/EgfrToAlkReflexPage.xaml
@@ -105,6 +105,7 @@
 					<RowDefinition Height="Auto"></RowDefinition>					
 					<RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
 				</Grid.RowDefinitions>
@@ -269,17 +270,20 @@
                 <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">QNS for PDL1:</TextBlock>
                 <CheckBox Grid.Column="1" Grid.Row="5" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRToALKReflexAnalysisTestOrder.QNSForPDL1}" Checked="CheckBoxQNSForPDL1_Checked" Unchecked="CheckBoxQNSForPDL1_Unchecked"/>
 
-                <TextBlock Grid.Column="0" Grid.Row="6" FontWeight="Bold" Margin="2,2,2,2">Interpretation:</TextBlock>
-				<TextBox Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True" />
+                <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Do Not Perform PDL1:</TextBlock>
+                <CheckBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRToALKReflexAnalysisTestOrder.DoNotPerformPDL1}" Checked="CheckBoxDoNotPerformPDL1_Checked" Unchecked="CheckBoxDoNotPerformPDL1_Unchecked"/>
 
-				<TextBlock Grid.Column="0" Grid.Row="8" FontWeight="Bold" Margin="2,2,2,2">Method:</TextBlock>
-				<TextBox Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True" />
+                <TextBlock Grid.Column="0" Grid.Row="7" FontWeight="Bold" Margin="2,2,2,2">Interpretation:</TextBlock>
+				<TextBox Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-				<TextBlock Grid.Column="0" Grid.Row="10" FontWeight="Bold" Margin="2,2,2,2">References:</TextBlock>
-				<TextBox Grid.Column="0" Grid.Row="11" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.References}" TextWrapping="Wrap" AcceptsReturn="True" />
+				<TextBlock Grid.Column="0" Grid.Row="9" FontWeight="Bold" Margin="2,2,2,2">Method:</TextBlock>
+				<TextBox Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-				<TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="12" FontWeight="Bold" Margin="2,2,2,2">Current Orders</TextBlock>
-				<ListView Name="ListBoxPanelSetOrders" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="13" Margin="2,2,2,2" HorizontalAlignment="Stretch"
+				<TextBlock Grid.Column="0" Grid.Row="11" FontWeight="Bold" Margin="2,2,2,2">References:</TextBlock>
+				<TextBox Grid.Column="0" Grid.Row="12" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=EGFRToALKReflexAnalysisTestOrder.References}" TextWrapping="Wrap" AcceptsReturn="True" />
+
+				<TextBlock Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="13" FontWeight="Bold" Margin="2,2,2,2">Current Orders</TextBlock>
+				<ListView Name="ListBoxPanelSetOrders" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="14" Margin="2,2,2,2" HorizontalAlignment="Stretch"
                       ItemsSource="{Binding Path=AccessionOrder.PanelSetOrderCollection}">
 					<ListView.View>
 						<GridView>
@@ -292,13 +296,13 @@
 					</ListView.View>
 				</ListView>				
 
-				<TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
-				<CheckBox Grid.Column="1" Grid.Row="14" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRToALKReflexAnalysisTestOrder.Distribute}"></CheckBox>
+				<TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
+				<CheckBox Grid.Column="1" Grid.Row="15" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRToALKReflexAnalysisTestOrder.Distribute}"></CheckBox>
 
-				<TextBlock Grid.Column="0" Grid.Row="15" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
-				<CheckBox Grid.Column="1" Grid.Row="15" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRToALKReflexAnalysisTestOrder.NoCharge}"></CheckBox>
+				<TextBlock Grid.Column="0" Grid.Row="16" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
+				<CheckBox Grid.Column="1" Grid.Row="16" Margin="2,2,2,2" IsChecked="{Binding Path=EGFRToALKReflexAnalysisTestOrder.NoCharge}"></CheckBox>
 
-				<Grid Grid.Column="0" Grid.Row="16" Grid.ColumnSpan="2">
+				<Grid Grid.Column="0" Grid.Row="17" Grid.ColumnSpan="2">
 					<Grid.ColumnDefinitions>
 						<ColumnDefinition Width="Auto"></ColumnDefinition>
 						<ColumnDefinition Width="*"></ColumnDefinition>
