--- a/UI/Test/CCNDIBCLIGHByFISHResultPage.xaml
+++ b/UI/Test/CCNDIBCLIGHByFISHResultPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.Test.CCNDIBCLIGHResultPage"
+﻿<UserControl x:Class="YellowstonePathology.UI.Test.CCNDIBCLIGHByFISHResultPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
