--- a/UI/Test/API2MALT1ByFISHResultPage.xaml
+++ b/UI/Test/API2MALT1ByFISHResultPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.Test.API2MALT1ResultPage"
+﻿<UserControl x:Class="YellowstonePathology.UI.Test.API2MALT1ByFISHResultPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
