--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -113,7 +113,7 @@
                 
                     <Button Click="ToolBarButtonViewDocument_Click" ToolTip="View Document" Height="22" Name="ToolBarButtonViewDocument" MouseDoubleClick="ToolBarButtonViewDocument_MouseDoubleClick">
                         <StackPanel Orientation="Horizontal">
-						<Image Source="/Graphics/Document.jpg"></Image>
+                            <Image Source="/Resources/Document.jpg"></Image>
 						<TextBlock Margin="2,0,0,0">Document</TextBlock>
 					</StackPanel>
 				</Button>
