--- a/UI/Test/CCNDIBCLIGHByPCRResultPage.xaml
+++ b/UI/Test/CCNDIBCLIGHByPCRResultPage.xaml
@@ -42,10 +42,10 @@
 
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Results</TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">
-                    <Hyperlink Click="HyperLinkNormal_Click">Normal</Hyperlink>
+                    <Hyperlink Click="HyperLinkNotDetected_Click">Not Detected</Hyperlink>
                 </TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,5">
-                    <Hyperlink Click="HyperLinkAbnormal_Click">Abnormal</Hyperlink>
+                    <Hyperlink Click="HyperLinkDetected_Click">Detected</Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">
@@ -109,11 +109,8 @@
                     <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold">Interpretation:</TextBlock>
                     <TextBox Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True" />
 
-                    <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontWeight="Bold">Probe Set Detail:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ProbeSetDetail}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
-
-                    <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,5" FontWeight="Bold">Nuclei Scored:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.NucleiScored}" />
+                    <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontWeight="Bold">Method:</TextBlock>
+                    <TextBox Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
 
                     <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" FontWeight="Bold">References:</TextBlock>
                     <TextBox Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.References}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
