--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -30,6 +30,7 @@
 					<MenuItem Header="Database" Click="MenuItemDatabase_Click"></MenuItem>
                     <MenuItem Header="Application Validation" Click="MenuItemValidate_Click"></MenuItem>
                     <MenuItem Header="Locked Cases" Click="MenuItemLockedCases_Click"></MenuItem>
+                    <MenuItem Header="Update Spelling Dictionary" Click="MenuItemUpdateSpellDictionary_Click"></MenuItem>
                 </MenuItem>			
         
 			<MenuItem Header="_Surgical" Name="MenuItemSurgical">
