--- a/UI/Login/Receiving/ClientOrderDetailsPage.xaml
+++ b/UI/Login/Receiving/ClientOrderDetailsPage.xaml
@@ -131,7 +131,7 @@
 				        SelectedValue="{Binding Path=ClientOrderDetail.SpecimenId}" IsEditable="True"/>
 
                 <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontSize="14" HorizontalAlignment="Right">Accession As:</TextBlock>
-                <TextBox Name="TextBoxAccessionAs" Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=ClientOrderDetail.DescriptionToAccessionBinding, ValidatesOnDataErrors=True}" TextWrapping="Wrap" FontSize="14" AcceptsReturn="True" GotFocus="TextBoxAccessionAs_GotFocus">
+                <TextBox Name="TextBoxAccessionAs" Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=ClientOrderDetail.DescriptionToAccessionBinding, ValidatesOnDataErrors=True}" TextWrapping="Wrap" FontSize="14" AcceptsReturn="True" GotFocus="TextBoxAccessionAs_GotFocus" SpellCheck.IsEnabled="True">
                     <TextBox.Style>
                         <Style TargetType="{x:Type Control}">
                             <Setter Property="Validation.ErrorTemplate">
