--- a/UI/Login/Receiving/ClientOrderDetailsPage.xaml
+++ b/UI/Login/Receiving/ClientOrderDetailsPage.xaml
@@ -2,6 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib" 
+    xmlns:system="clr-namespace:System;assembly=system"
     x:Class="YellowstonePathology.UI.Login.Receiving.ClientOrderDetailsPage"
 	xmlns:validationRules="clr-namespace:YellowstonePathology.UI.ValidationRules"
 	xmlns:converter="clr-namespace:YellowstonePathology.UI.Converter"
@@ -132,6 +133,9 @@
 
                 <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontSize="14" HorizontalAlignment="Right">Accession As:</TextBlock>
                 <TextBox Name="TextBoxAccessionAs" Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=ClientOrderDetail.DescriptionToAccessionBinding, ValidatesOnDataErrors=True}" TextWrapping="Wrap" FontSize="14" AcceptsReturn="True" GotFocus="TextBoxAccessionAs_GotFocus" SpellCheck.IsEnabled="True">
+                    <SpellCheck.CustomDictionaries>
+                        <system:Uri>pack://application:,,,/ypi-custom.lex</system:Uri>
+                    </SpellCheck.CustomDictionaries>
                     <TextBox.Style>
                         <Style TargetType="{x:Type Control}">
                             <Setter Property="Validation.ErrorTemplate">
