--- a/UI/Login/Receiving/TaskOrderPage.xaml
+++ b/UI/Login/Receiving/TaskOrderPage.xaml
@@ -44,7 +44,7 @@
                     <Hyperlink Click="HyperLinkParaffinCurlPreparation_Click">Paraffin Curl Preparation</Hyperlink>
 				</TextBlock>				
 				<TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,5">
-                    <Hyperlink Click="HyperLinkMicrodisectionForMolecular_Click">Microdisection For Molecular</Hyperlink>
+                    <Hyperlink Click="HyperLinkMicrodissectionForMolecular_Click">Microdissection For Molecular</Hyperlink>
 				</TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,5">
                     <Hyperlink Click="HyperLinkSendBlockToNeogenomics_Click">Send block to Neogenomics</Hyperlink>
