--- a/UI/Test/WomensHealthProfilePage.xaml
+++ b/UI/Test/WomensHealthProfilePage.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.Test.WomensHealthProfilePage"
+﻿<Test:ResultControl x:Class="YellowstonePathology.UI.Test.WomensHealthProfilePage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:Test="clr-namespace:YellowstonePathology.UI.Test">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"></ColumnDefinition>
@@ -64,13 +65,13 @@
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
 			</TextBlock>
 
-			<TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
+            <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
 			</TextBlock>
             <TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkFinalize_Click">Finalize</Hyperlink>
             </TextBlock>
-            <TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,0">                    
+            <TextBlock Name="TextBlockNext" Grid.Column="0" Grid.Row="10" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkNext_Click">Next</Hyperlink>
             </TextBlock>
 
@@ -78,7 +79,7 @@
                     <Hyperlink Click="HyperLinkUnacceptResults_Click">Unaccept Results</Hyperlink>
 				</TextBlock>
 
-			<TextBlock Grid.Column="0" Grid.Row="13" Margin="5,3,0,0">                    
+            <TextBlock Name="TextBlockUnfinalize" Grid.Column="0" Grid.Row="13" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnfinalize_Click">Unfinalize</Hyperlink>
             </TextBlock>
             <TextBlock Grid.Column="0" Grid.Row="14" Margin="5,3,0,0">
@@ -262,8 +263,8 @@
         </ScrollViewer>
         
         <Border Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}" Margin="0,0,0,0"></Border>
-        <Button Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="ButtonBack_Click" Width="100" Height="40" HorizontalAlignment="Left" Visibility="{Binding Path=BackButtonVisibility}"> &lt; Back</Button>
-        <Button Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="ButtonClose_Click" Width="100" Height="40" HorizontalAlignment="Right">Close</Button>
+        <Button Name="ButtonBack" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="ButtonBack_Click" Width="100" Height="40" HorizontalAlignment="Left" Visibility="{Binding Path=BackButtonVisibility}"> &lt; Back</Button>
+        <Button Name="ButtonClose" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="ButtonClose_Click" Width="100" Height="40" HorizontalAlignment="Right">Close</Button>
 
     </Grid>
-</UserControl>
+</Test:ResultControl>
