--- a/UI/Test/MissingInformationResultPage.xaml
+++ b/UI/Test/MissingInformationResultPage.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl
+﻿<Test:ResultControl
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:sys="clr-namespace:System;assembly=mscorlib" 
     x:Class="YellowstonePathology.UI.Test.MissingInformationResultPage"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:Test="clr-namespace:YellowstonePathology.UI.Test">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -98,7 +99,7 @@
 					</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="11" Margin="5,3,0,0">                    
+                <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="11" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnfinalResults_Click">
 						<TextBlock Text="Unfinalize" />
 					</Hyperlink>
@@ -191,4 +192,4 @@
         <Button Name="ButtonNext" Grid.Column="1" Grid.Row="2" Margin="5,5,5,5" Click="ButtonNext_Click" Width="100" Height="40" HorizontalAlignment="Right">Next ></Button>                
         
     </Grid>
-</UserControl>
+</Test:ResultControl>
